Update Issue 1029
Fixing bugs uncovered by wiring up the example application

git-svn-id: https://mobicents.googlecode.com/svn/trunk/tools/snmp-adaptor@18851 bf0df8d0-2c1f-0410-b170-bd30377b63dc